# backend/src/routes/notifications.routes.ts
@@ -1,8 +1,14 @@
 import { Router } from 'express';
 import { verifyToken } from '../middlewares/verifyToken';
-import { getPreferences, updatePreferences } from '../controllers/notifications.controller';
+import { getPreferences, updatePreferences, unsubscribeEmailHandler } from '../controllers/notifications.controller';
 
 const router = Router();
+
+//Preferences (auth required)
 router.get('/preferences', verifyToken, getPreferences);
 router.patch('/preferences', verifyToken, updatePreferences);
+
+// Unsubscribe (no auth)
+router.get('/unsubscribe/:token', unsubscribeEmailHandler);
+
 export default router;
